# ingredient_regex_engine

./: .gitignore  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  settings.py
.github/workflows/: ci.yml
examples/: demo.ipynb  quickstart.ipynb  quickstart_demo.ipynb
migrations/: env.py
migrations/versions/: 51ed5d6135cf_init.py
output/regexes/: and_conjunctions.json  ingredient_condition.json  ingredient_name.json  or_conjunctions.json  unit.json
src/: main.py
src/regex_engine/: __init__.py  api.py  config.py
src/regex_engine/adapters/categorizer/: agent_categorizer.py  agent_categorizer_client.py  categorizer_service_default.py  categorizing_vote.py
src/regex_engine/adapters/db/: file_ingredient_regex_repository.py  file_regex_repository.py
src/regex_engine/adapters/input_adapters/: pandas_input_adapter.py  string_input_adapter.py  string_iterable_input_adapter.py  types.py
src/regex_engine/adapters/normalizers/: adjective_nromalizer.py  ingredient_name_normalizer.py  unit_normalizer.py
src/regex_engine/adapters/parser/: default_ingredient_parser.py  demo_parser.py
src/regex_engine/application/: dto.py
src/regex_engine/application/dto/: analysed_phrase.py  base_word.py  generated_word.py  positioned_word.py  word_analysis.py
src/regex_engine/application/use_cases/: amount_extractor_default.py  ingredient_filter_engine.py  ingredient_regex_engine.py  (+8 more)
src/regex_engine/bootstrap/: bootstap_demo.py  bootstrap.py
src/regex_engine/domain/: const.py  enums.py  errors.py
src/regex_engine/ports/: amount_extractor.py  categories_repository.py  categorizer.py  categorizer_service.py  conjuctor_splitter.py  filter_engine.py  ingredient_parser.py  ingredient_regex_engine.py  input_adapter.py  learing_rules.py  learning_engine.py  morfeusz.py  regex_orchestrator.py  regex_registry.py  regex_resolver.py  regex_service.py  token_normalizer.py
tests/integration/: conftest.py  test_agent_ingredient_parser.py  test_inflector_paradigm.py  test_morfeusz_adjective_normalizer.py  test_morfeusz_ingredient_name_normalizer.py  test_morfeusz_unit_normalizer.py  test_phrase_analyser.py
tests/live/: conftest.py  test_agent_categorizing.py  test_agent_real_parsing.py
tests/unit/: test_categorized_ingredient_regex_repository.py  test_file_category_repository.py  test_morfeusz_ingredient_normalizer.py  test_morfeusz_utils.py  test_parsing_vote.py  test_regex_entry.py  test_regex_orchestrator_default.py  test_regex_orchestrator_default_depr.py  test_regex_registry.py  test_regex_service_default.py  test_word_models.py
(+58 files in other folders)
