[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regex-engine"
version = "0.1.0"
description = "A library enabling the standardisation of food ingredient lists"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic==2.12.2",
    "openai-agents>=0.2.0",
    "python-dotenv==1.2.2",
    "morfeusz2>=1.99",
    "pandas",
    "psycopg[binary]>=3.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.18.4",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.12",
    "testcontainers[postgres]==4.14.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=regex_engine --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["regex_engine"]
branch = true

[tool.coverage.report]
omit = [
    "tests/*",
    "*/__init__.py",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/regex_engine/adapters/categorizer/agent_categorizer_client.py" = ["E501"]
"src/regex_engine/adapters/parser/agent_ingredient_parser/agent_client.py" = ["E501"]
"tests/**/*.py" = ["E501"]
